[workspace]
default-members = ["kube"]
resolver = "1"
members = [
  "kube",
  "kube-client",
  "kube-core",
  "kube-derive",
  "kube-runtime",

  # internal
  "e2e",
  "examples",
]

[workspace.package]
version = "0.91.0"
authors = [
  "clux <sszynrae@gmail.com>",
  "Natalie Klestrup Röijezon <nat@nullable.se>",
  "kazk <kazk.dev@gmail.com>",
]
repository = "https://github.com/kube-rs/kube"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0.71"
assert-json-diff = "2.0.2"
async-broadcast = "0.7.0"
async-stream = "0.3.5"
async-trait = "0.1.64"
backoff = "0.4.0"
base64 = "0.22.0"
bytes = "1.1.0"
chrono = { version = "0.4.34", default-features = false }
darling = "0.20.3"
derivative = "2.1.1"
either = "1.6.1"
form_urlencoded = "1.2.0"
futures = { version = "0.3.17", default-features = false }
hashbrown = "0.14.0"
home = "0.5.4"
http = "1.1.0"
http-body = "1.0.0"
http-body-util = "0.1.1"
hyper = "1.2.0"
hyper-util = "0.1.3"
hyper-openssl = "0.10.2"
hyper-rustls = { version = "0.27.0", default-features = false }
hyper-socks2 = { version = "0.9.0", default-features = false }
hyper-timeout = "0.5.1"
json-patch = "2.0.0"
jsonptr = "0.4.7"
jsonpath-rust = "0.5.0"
k8s-openapi = { version = "0.22.0", default-features = false }
openssl = "0.10.36"
parking_lot = "0.12.0"
pem = "3.0.1"
pin-project = "1.0.4"
proc-macro2 = "1.0.29"
quote = "1.0.10"
rand = "0.8.3"
rustls = { version = "0.23.0", default-features = false }
rustls-pemfile = "2.0.0"
schemars = "0.8.6"
secrecy = "0.8.0"
serde = "1.0.130"
serde_json = "1.0.68"
serde_yaml = "0.9.19"
syn = "2.0.38"
tame-oauth = "0.10.0"
tempfile = "3.1.0"
thiserror = "1.0.29"
tokio = "1.14.0"
tokio-test = "0.4.0"
tokio-tungstenite = "0.23.0"
tokio-util = "0.7.0"
tower = "0.4.13"
tower-http = "0.5.2"
tower-test = "0.4.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.17"
trybuild = "1.0.48"
