[package]
name = "e2e"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.release]
release = false

[[bin]]
name = "job"
path = "job.rs"

[[bin]]
name = "boot"
path = "boot.rs"

[features]
latest = ["k8s-openapi/latest"]
mk8sv = ["k8s-openapi/v1_24"]
rustls = ["kube/rustls-tls"]
openssl = ["kube/openssl-tls"]

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
kube = { path = "../kube", version = "^0.89.0", default-features = false, features = ["client", "runtime", "ws", "admission", "gzip"] }
k8s-openapi.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
