[package]
name = "kube-examples"
version = "0.1.0"
authors = [
  "clux <sszynrae@gmail.com>",
  "Teo Klestrup Röijezon <teo@nullable.se>",
  "kazk <kazk.dev@gmail.com>",
]
publish = false
edition = "2021"
license = "Apache-2.0"

[package.metadata.release]
release = false

[features]
default = ["native-tls", "kubederive", "ws", "latest", "runtime"]
kubederive = ["kube/derive"]
native-tls = ["kube/client", "kube/native-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime"]
ws = ["kube/ws"]
latest = ["k8s-openapi/v1_22"]
deprecated = ["kube/deprecated-crd-v1beta1", "k8s-openapi/v1_21"]

[dev-dependencies]
tokio-util = "0.6.8"
assert-json-diff = "2.0.1"
validator = { version = "0.14.0", features = ["derive"] }
anyhow = "1.0.44"
env_logger = "0.9.0"
futures = "0.3.17"
kube = { path = "../kube", version = "^0.64.0", default-features = false, features = ["admission"] }
kube-derive = { path = "../kube-derive", version = "^0.64.0", default-features = false } # only needed to opt out of schema
k8s-openapi = { version = "0.13.1", default-features = false }
log = "0.4.11"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
tokio = { version = "1.14.0", features = ["full"] }
color-eyre = "0.5.10"
# Some Api::delete methods use Either
either = "1.6.1"
schemars = "0.8.6"
static_assertions = "1.1.0"
tar = "0.4.37"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
warp = { version = "0.3", features = ["tls"] }
http = "0.2.5"
json-patch = "0.2.6"
tower = { version = "0.4.6", features = ["limit"] }
tower-http = { version = "0.1.0", features = ["trace", "decompression-gzip"] }
hyper = { version = "0.14.13", features = ["client", "http1", "stream", "tcp"] }
thiserror = "1.0.29"

[[example]]
name = "configmapgen_controller"
path = "configmapgen_controller.rs"

[[example]]
name = "configmap_watcher"
path = "configmap_watcher.rs"

[[example]]
name = "configmap_reflector"
path = "configmap_reflector.rs"

[[example]]
name = "crd_api"
path = "crd_api.rs"

[[example]]
name = "crd_apply"
path = "crd_apply.rs"

[[example]]
name = "crd_derive"
path = "crd_derive.rs"

[[example]]
name = "crd_derive_schema"
path = "crd_derive_schema.rs"

[[example]]
name = "crd_derive_custom_schema"
path = "crd_derive_custom_schema.rs"

[[example]]
name = "crd_derive_no_schema"
path = "crd_derive_no_schema.rs"

[[example]]
name = "crd_reflector"
path = "crd_reflector.rs"

[[example]]
name = "deployment_reflector"
path = "deployment_reflector.rs"

[[example]]
name = "dynamic_api"
path = "dynamic_api.rs"

[[example]]
name = "dynamic_pod"
path = "dynamic_pod.rs"

[[example]]
name = "event_watcher"
path = "event_watcher.rs"

[[example]]
name = "job_api"
path = "job_api.rs"

[[example]]
name = "log_stream"
path = "log_stream.rs"

[[example]]
name = "multi_watcher"
path = "multi_watcher.rs"

[[example]]
name = "pod_api"
path = "pod_api.rs"

[[example]]
name = "pod_cp"
path = "pod_cp.rs"

[[example]]
name = "pod_attach"
path = "pod_attach.rs"

[[example]]
name = "pod_exec"
path = "pod_exec.rs"

[[example]]
name = "pod_evict"
path = "pod_evict.rs"

[[example]]
name = "pod_shell"
path = "pod_shell.rs"

[[example]]
name = "pod_reflector"
path = "pod_reflector.rs"

[[example]]
name = "pod_watcher"
path = "pod_watcher.rs"

[[example]]
name = "node_reflector"
path = "node_reflector.rs"

[[example]]
name = "node_watcher"
path = "node_watcher.rs"

[[example]]
name = "dynamic_watcher"
path = "dynamic_watcher.rs"

[[example]]
name = "secret_reflector"
path = "secret_reflector.rs"

[[example]]
name = "admission_controller"
path = "admission_controller.rs"

[[example]]
name = "custom_client"
path = "custom_client.rs"

[[example]]
name = "custom_client_tls"
path = "custom_client_tls.rs"
required-features = ["native-tls", "rustls-tls"]

[[example]]
name = "custom_client_trace"
path = "custom_client_trace.rs"

[[example]]
name = "secret_syncer"
path = "secret_syncer.rs"
