[package]
name = "kube-examples"
version = "0.1.0"
authors = [
  "clux <sszynrae@gmail.com>",
  "Teo Klestrup Röijezon <teo@nullable.se>",
  "kazk <kazk.dev@gmail.com>",
]
publish = false
edition = "2021"
license = "Apache-2.0"

[package.metadata.release]
release = false

[features]
default = ["openssl-tls", "kubederive", "ws", "latest", "runtime"]
kubederive = ["kube/derive"]
openssl-tls = ["kube/client", "kube/openssl-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime"]
ws = ["kube/ws"]
latest = ["k8s-openapi/v1_25"]

[dev-dependencies]
tokio-util = "0.7.0"
assert-json-diff = "2.0.1"
validator = { version = "0.16.0", features = ["derive"] }
anyhow = "1.0.44"
futures = "0.3.17"
jsonpath_lib = "0.3.0"
kube = { path = "../kube", version = "^0.75.0", default-features = false, features = ["admission"] }
kube-derive = { path = "../kube-derive", version = "^0.75.0", default-features = false } # only needed to opt out of schema
k8s-openapi = { version = "0.16.0", default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
tokio = { version = "1.14.0", features = ["full"] }
either = "1.6.1"
schemars = "0.8.6"
static_assertions = "1.1.0"
tar = "0.4.37"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
warp = { version = "0.3", default-features = false, features = ["tls"] }
http = "0.2.5"
json-patch = "0.2.6"
tower = { version = "0.4.6", features = ["limit"] }
tower-http = { version = "0.3.2", features = ["trace", "decompression-gzip"] }
hyper = { version = "0.14.13", features = ["client", "http1", "stream", "tcp"] }
thiserror = "1.0.29"
backoff = "0.4.0"
clap = { version = "4.0", default-features = false, features = ["std", "cargo", "derive"] }
edit = "0.1.3"
tokio-stream = { version = "0.1.9", features = ["net"] }

[[example]]
name = "configmapgen_controller"
path = "configmapgen_controller.rs"

[[example]]
name = "crd_api"
path = "crd_api.rs"

[[example]]
name = "crd_apply"
path = "crd_apply.rs"

[[example]]
name = "crd_derive"
path = "crd_derive.rs"

[[example]]
name = "crd_derive_schema"
path = "crd_derive_schema.rs"

[[example]]
name = "crd_derive_custom_schema"
path = "crd_derive_custom_schema.rs"

[[example]]
name = "crd_derive_multi"
path = "crd_derive_multi.rs"

[[example]]
name = "crd_derive_no_schema"
path = "crd_derive_no_schema.rs"

[[example]]
name = "crd_reflector"
path = "crd_reflector.rs"

[[example]]
name = "dynamic_api"
path = "dynamic_api.rs"

[[example]]
name = "dynamic_jsonpath"
path = "dynamic_jsonpath.rs"

[[example]]
name = "dynamic_pod"
path = "dynamic_pod.rs"

[[example]]
name = "event_watcher"
path = "event_watcher.rs"

[[example]]
name = "job_api"
path = "job_api.rs"

[[example]]
name = "kubectl"
path = "kubectl.rs"

[[example]]
name = "log_stream"
path = "log_stream.rs"

[[example]]
name = "multi_watcher"
path = "multi_watcher.rs"

[[example]]
name = "pod_api"
path = "pod_api.rs"

[[example]]
name = "pod_cp"
path = "pod_cp.rs"

[[example]]
name = "pod_attach"
path = "pod_attach.rs"

[[example]]
name = "pod_exec"
path = "pod_exec.rs"

[[example]]
name = "pod_paged"
path = "pod_paged.rs"

[[example]]
name = "pod_evict"
path = "pod_evict.rs"

[[example]]
name = "pod_shell"
path = "pod_shell.rs"

[[example]]
name = "pod_portforward"
path = "pod_portforward.rs"

[[example]]
name = "pod_portforward_hyper_http"
path = "pod_portforward_hyper_http.rs"

[[example]]
name = "pod_portforward_bind"
path = "pod_portforward_bind.rs"

[[example]]
name = "pod_reflector"
path = "pod_reflector.rs"

[[example]]
name = "pod_watcher"
path = "pod_watcher.rs"

[[example]]
name = "node_reflector"
path = "node_reflector.rs"

[[example]]
name = "node_watcher"
path = "node_watcher.rs"

[[example]]
name = "dynamic_watcher"
path = "dynamic_watcher.rs"

[[example]]
name = "secret_reflector"
path = "secret_reflector.rs"

[[example]]
name = "admission_controller"
path = "admission_controller.rs"

[[example]]
name = "custom_client"
path = "custom_client.rs"

[[example]]
name = "custom_client_tls"
path = "custom_client_tls.rs"
required-features = ["openssl-tls", "rustls-tls"]

[[example]]
name = "custom_client_trace"
path = "custom_client_trace.rs"

[[example]]
name = "secret_syncer"
path = "secret_syncer.rs"
