[package]
name = "kube-examples"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.release]
release = false

[features]
default = ["rustls-tls", "kubederive", "ws", "latest", "socks5", "runtime", "refresh"]
kubederive = ["kube/derive"]
openssl-tls = ["kube/client", "kube/openssl-tls", "kube/unstable-client"]
rustls-tls = ["kube/client", "kube/rustls-tls", "kube/unstable-client"]
runtime = ["kube/runtime", "kube/unstable-runtime"]
socks5 = ["kube/socks5"]
refresh = ["kube/oauth", "kube/oidc"]
kubelet-debug = ["kube/kubelet-debug"]
ws = ["kube/ws"]
latest = ["k8s-openapi/latest"]

[dev-dependencies]
tokio-util.workspace = true
assert-json-diff.workspace = true
garde = { version = "0.18.0", default-features = false, features = ["derive"] }
anyhow.workspace = true
futures = { workspace = true, features = ["async-await"] }
jsonpath-rust.workspace = true
jsonptr.workspace = true
kube = { path = "../kube", version = "^0.91.0", default-features = false, features = ["admission"] }
kube-derive = { path = "../kube-derive", version = "^0.91.0", default-features = false } # only needed to opt out of schema
k8s-openapi.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = ["full"] }
either.workspace = true
schemars.workspace = true
static_assertions = "1.1.0"
tar = "0.4.37"
tracing.workspace = true
tracing-subscriber.workspace = true
warp = { version = "0.3", default-features = false, features = ["tls"] }
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
json-patch.workspace = true
tower = { workspace = true, features = ["limit"] }
tower-http = { workspace = true, features = ["trace", "decompression-gzip"] }
hyper = { workspace = true, features = ["client", "http1"] }
hyper-util = { workspace = true, features = ["client-legacy", "http1", "tokio"] }
thiserror.workspace = true
backoff.workspace = true
clap = { version = "4.0", default-features = false, features = ["std", "cargo", "derive"] }
edit = "0.1.3"
tokio-stream = { version = "0.1.9", features = ["net"] }
crossterm = "0.27.0"

[[example]]
name = "configmapgen_controller"
path = "configmapgen_controller.rs"

[[example]]
name = "shared_stream_controllers"
path = "shared_stream_controllers.rs"

[[example]]
name = "crd_api"
path = "crd_api.rs"

[[example]]
name = "crd_apply"
path = "crd_apply.rs"

[[example]]
name = "crd_derive"
path = "crd_derive.rs"

[[example]]
name = "crd_derive_schema"
path = "crd_derive_schema.rs"

[[example]]
name = "crd_derive_custom_schema"
path = "crd_derive_custom_schema.rs"

[[example]]
name = "crd_derive_multi"
path = "crd_derive_multi.rs"

[[example]]
name = "crd_derive_no_schema"
path = "crd_derive_no_schema.rs"

[[example]]
name = "crd_reflector"
path = "crd_reflector.rs"

[[example]]
name = "dynamic_api"
path = "dynamic_api.rs"

[[example]]
name = "dynamic_jsonpath"
path = "dynamic_jsonpath.rs"

[[example]]
name = "dynamic_pod"
path = "dynamic_pod.rs"

[[example]]
name = "event_watcher"
path = "event_watcher.rs"

[[example]]
name = "job_api"
path = "job_api.rs"

[[example]]
name = "kubectl"
path = "kubectl.rs"

[[example]]
name = "log_stream"
path = "log_stream.rs"

[[example]]
name = "multi_watcher"
path = "multi_watcher.rs"

[[example]]
name = "pod_api"
path = "pod_api.rs"

[[example]]
name = "pod_cp"
path = "pod_cp.rs"

[[example]]
name = "pod_attach"
path = "pod_attach.rs"

[[example]]
name = "pod_exec"
path = "pod_exec.rs"

[[example]]
name = "pod_log_kubelet_debug"
path = "pod_log_kubelet_debug.rs"
required-features = ["kubelet-debug"]

[[example]]
name = "pod_paged"
path = "pod_paged.rs"

[[example]]
name = "pod_evict"
path = "pod_evict.rs"

[[example]]
name = "pod_shell"
path = "pod_shell.rs"

[[example]]
name = "pod_portforward"
path = "pod_portforward.rs"

[[example]]
name = "pod_portforward_hyper_http"
path = "pod_portforward_hyper_http.rs"

[[example]]
name = "pod_portforward_bind"
path = "pod_portforward_bind.rs"

[[example]]
name = "pod_reflector"
path = "pod_reflector.rs"

[[example]]
name = "pod_watcher"
path = "pod_watcher.rs"

[[example]]
name = "request_raw"
path = "request_raw.rs"

[[example]]
name = "node_reflector"
path = "node_reflector.rs"

[[example]]
name = "node_watcher"
path = "node_watcher.rs"

[[example]]
name = "dynamic_watcher"
path = "dynamic_watcher.rs"

[[example]]
name = "secret_reflector"
path = "secret_reflector.rs"

[[example]]
name = "admission_controller"
path = "admission_controller.rs"

[[example]]
name = "custom_client"
path = "custom_client.rs"

[[example]]
name = "custom_client_tls"
path = "custom_client_tls.rs"
required-features = ["openssl-tls", "rustls-tls"]

[[example]]
name = "custom_client_trace"
path = "custom_client_trace.rs"

[[example]]
name = "secret_syncer"
path = "secret_syncer.rs"

[[example]]
name = "pod_shell_crossterm"
path = "pod_shell_crossterm.rs"
required-features = ["ws"]
