[package]
name = "kube-client"
description = "Kubernetes client"
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords = ["kubernetes", "client",]
categories = ["web-programming::http-client", "network-programming", "api-bindings"]

[features]
default = ["client", "ring"]
rustls-tls = ["rustls", "hyper-rustls"]
webpki-roots = ["hyper-rustls/webpki-roots"]
aws-lc-rs = ["hyper-rustls?/aws-lc-rs"]
ring = ["hyper-rustls?/ring"]
openssl-tls = ["openssl", "hyper-openssl"]
ws = ["client", "tokio-tungstenite", "kube-core/ws", "tokio/macros"]
kubelet-debug = ["ws", "kube-core/kubelet-debug"]
oauth = ["client", "tame-oauth"]
oidc = ["client", "form_urlencoded"]
gzip = ["client", "tower-http/decompression-gzip"]
client = ["config", "__non_core", "hyper", "hyper-util", "http-body", "http-body-util", "tower", "tower-http", "hyper-timeout", "jiff", "jsonpath-rust", "bytes", "futures", "tokio", "tokio-util", "either"]
jsonpatch = ["kube-core/jsonpatch"]
admission = ["kube-core/admission"]
config = ["__non_core", "pem"]
socks5 = ["hyper-util/client-proxy"]
http-proxy = ["hyper-util/client-proxy"]
unstable-client = []

# private feature sets; do not use
__non_core = ["tracing", "serde_yaml", "base64"]

[package.metadata.docs.rs]
features = ["client", "rustls-tls", "openssl-tls", "ws", "oauth", "oidc", "jsonpatch", "admission", "k8s-openapi/latest", "socks5", "unstable-client", "http-proxy"]
# Define the configuration attribute `docsrs`. Used to enable `doc_cfg` feature.
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
base64 = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = { workspace = true, optional = true }
http.workspace = true
http-body = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
either = { workspace = true, optional = true }
thiserror.workspace = true
futures = { workspace = true, optional = true, features = ["std"] }
jiff = { workspace = true, optional = true, features = ["std", "serde"] }
pem = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
tokio = { workspace = true, features = ["time", "signal", "sync"], optional = true }
kube-core = { path = "../kube-core", version = "=3.0.1" }
jsonpath-rust = { workspace = true, optional = true }
tokio-util = { workspace = true, features = ["io", "codec"], optional = true }
hyper = { workspace = true, features = ["client", "http1"], optional = true }
hyper-util = { workspace = true, features = ["client", "client-legacy", "http1", "tokio", "tracing"], optional = true }
hyper-rustls = { workspace = true, features = ["http1", "logging", "native-tokio", "tls12"], optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tower = { workspace = true, features = ["buffer", "filter", "util", "retry"], optional = true }
tower-http = { workspace = true, features = ["auth", "map-response-body", "trace", "util"], optional = true }
hyper-timeout = { workspace = true, optional = true }
tame-oauth = { workspace = true, features = ["gcp"], optional = true }
secrecy = { workspace = true }
tracing = { workspace = true, features = ["log"], optional = true }
hyper-openssl = { workspace = true, features = ["client-legacy", "tokio"], optional = true }
form_urlencoded = { workspace = true, optional = true }
k8s-openapi= { workspace = true, features = [] }

[dev-dependencies]
hyper = { workspace = true, features = ["server"] }
kube = { path = "../kube", features = ["derive", "client", "ws"], version = ">=2" }
tempfile.workspace = true
futures = { workspace = true, features = ["async-await"] }
tokio = { workspace = true, features = ["full"] }
schemars.workspace = true
tokio-test.workspace = true
tower-test.workspace = true
k8s-openapi= { workspace = true, features = ["latest"] }
