[package]
name = "kube-config"
version = "0.32.0"
description = "Kubernetes config parser"
authors = [
  "clux <sszynrae@gmail.com>",
  "ynqa <un.pensiero.vano@gmail.com>",
]
license = "Apache-2.0"
repository = "https://github.com/clux/kube-rs"
readme = "../README.md"
keywords = ["kubernetes", "config", "oauth"]
categories = ["web-programming::http-client"]
edition = "2018"

[dependencies]
base64 = "0.12.0"
chrono = "0.4.11"
dirs = "2.0.2"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
serde_yaml = "0.8.11"
http = "0.2.1"
url = "2.1.1"
log = "0.4.8"
time = "0.2.9"
thiserror = "1.0.14"
openssl = { version = "0.10.29", optional = true }
rustls = { version = "0.17.0", optional = true }

[dependencies.reqwest]
version = "0.10.4"
optional = true
features = ["json", "gzip", "stream"]

[features]
default = ["native-tls", "oauth"]
oauth = []
native-tls = ["openssl", "reqwest/native-tls"]
rustls-tls = ["rustls", "reqwest/rustls-tls"]

[dev-dependencies]
tempfile = "3.1.0"
