[package]
name = "kube-core"
description = "Kube shared types, traits and client-less behavior"
version = "0.88.1"
authors = [
  "clux <sszynrae@gmail.com>",
  "kazk <kazk.dev@gmail.com>",
]
edition = "2021"
rust-version = "1.72.0"
license = "Apache-2.0"
keywords = ["kubernetes", "apimachinery"]
categories = ["api-bindings", "encoding", "parser-implementations"]
repository = "https://github.com/kube-rs/kube"
readme = "../README.md"

[package.metadata.docs.rs]
features = ["ws", "admission", "jsonpatch", "k8s-openapi/latest"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
ws = []
admission = ["json-patch"]
jsonpatch = ["json-patch"]
schema = ["schemars"]
kubelet-debug = ["ws"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
form_urlencoded = { workspace = true }
http = { workspace = true }
json-patch = { workspace = true, optional = true }
once_cell = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
schemars = { workspace = true, optional = true }
k8s-openapi=
{ workspace = true, features = [] }

[dev-dependencies]
k8s-openapi=
{ workspace = true, features = ["latest"] }
assert-json-diff = { workspace = true }
kube = { path = "../kube", version = "<1.0.0, >=0.53.0" }
serde_yaml = { workspace = true }
