[package]
name = "kube-derive"
description = "Custom derives for the kube kubernetes crates"
version = "0.88.1"
authors = [
  "clux <sszynrae@gmail.com>",
  "kazk <kazk.dev@gmail.com>",
]
edition = "2021"
rust-version = "1.72.0"
license = "Apache-2.0"
repository = "https://github.com/kube-rs/kube"
readme = "../README.md"
keywords = ["kubernetes", "macro", "customresource", "crd"]
categories = ["api-bindings", "encoding"]


[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["extra-traits"] }
serde_json = { workspace = true }
darling = { workspace = true }

[lib]
proc-macro = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
kube = { path = "../kube", version = "<1.0.0, >=0.61.0", features = ["derive", "client"] }
k8s-openapi = { workspace = true, features = ["latest"] }
schemars = { workspace = true, features = ["chrono"] }
chrono = { workspace = true }
trybuild = { workspace = true }
assert-json-diff = { workspace = true }
